--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <span class="line"></span>
                 <div id="language-container">
-                   <img src="img/language.png.webp" alt="">
+                   <img src="language.png.webp" alt="">
                    <p>English</p>
                    <i class="fa-solid fa-chevron-down"></i>
                 </div>
@@ -48,7 +48,7 @@
 
         <div id="header1">
             <div id="logo">
-            <img src="img/logo.png.webp" alt="">   
+            <img src="logo.png.webp" alt="">   
         </div>
             <ul id="header-center">
                  <li>Home</li>
